--- a/.env
+++ b/.env
@@ -2,9 +2,24 @@
 # Replace with your deployed backend base URL (no trailing slash)
 VITE_API_BASE_URL=https://www.bizmap.com
 
-PGDATABASE=bizmap
-PGUSER=moses
-PGPASSWORD=simplepass
-PGHOST=containers-us-west-123.railway.app
-PGPORT=5432
-RAILWAY_ENV=true
+# Django settings
+DJANGO_SECRET_KEY=your-secret-key
+DEBUG=true
+ALLOWED_HOSTS=localhost,127.0.0.1
+
+# Database (Railway public DB)
+DB_ENGINE=django.db.backends.postgresql
+PGDATABASE=railway
+PGUSER=postgres
+PGPASSWORD=ATkPUVSFfemVRtwWirKDdkHmAsILYBCR
+PGHOST=shortline.proxy.rlwy.net
+PGPORT=30712
+
+# CORS / CSRF
+CORS_ALLOW_ALL=true
+CSRF_TRUSTED_ORIGINS=http://localhost:8000
+
+# AI settings (optional)
+AI_ENABLE=true
+AI_EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
+
