--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,48 @@
-Django==5.0.6
-psycopg2-binary==2.9.9
-python-dotenv==1.0.1
-djangorestframework==3.15.2
-django-filter==24.3
-drf-spectacular==0.27.2
-drf-spectacular-sidecar==2024.6.1
-django-cors-headers==4.4.0
-djangorestframework-simplejwt==5.3.1
-gunicorn==22.0.0
-daphne==4.1.2
-channels==4.1.0
-Pillow==10.4.0
-numpy
-scikit-learn==1.4.2
-whitenoise==6.7.0
+asgiref==3.9.1
+attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
+cffi==2.0.0
+channels==4.3.1
+constantly==23.10.4
+cryptography==46.0.1
+daphne==4.2.1
+Django==5.2.6
+django-cors-headers==4.9.0
+django-filter==25.1
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+drf-spectacular==0.28.0
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+inflection==0.5.1
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+numpy==2.3.3
+pillow==11.3.0
+psycopg==3.2.10
+psycopg-binary==3.2.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+PyJWT==2.10.1
+pyOpenSSL==25.3.0
+python-dotenv==1.1.1
+PyYAML==6.0.2
+referencing==0.36.2
+rpds-py==0.27.1
+scikit-learn==1.7.2
+scipy==1.16.2
+service-identity==24.2.0
+setuptools==80.9.0
+sqlparse==0.5.3
+threadpoolctl==3.6.0
+Twisted==25.5.0
+txaio==25.6.1
+typing_extensions==4.15.0
+tzdata==2025.2
+uritemplate==4.2.0
+whitenoise==6.11.0
+zope.interface==8.0
