--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ asgiref==3.9.1
 attrs==25.3.0
 autobahn==24.4.2
 Automat==25.4.16
+certifi==2025.8.3
 cffi==2.0.0
 channels==4.3.1
+charset-normalizer==3.4.3
+colorama==0.4.6
 constantly==23.10.4
 cryptography==46.0.1
 daphne==4.2.1
@@ -13,14 +16,22 @@ django-filter==25.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.28.0
+filelock==3.13.1
+fsspec==2024.6.1
+huggingface-hub==0.35.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 inflection==0.5.1
+Jinja2==3.1.4
 joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.3
 numpy==2.3.3
+packaging==25.0
 pillow==11.3.0
 psycopg==3.2.10
 psycopg-binary==3.2.10
@@ -32,17 +43,29 @@ pyOpenSSL==25.3.0
 python-dotenv==1.1.1
 PyYAML==6.0.2
 referencing==0.36.2
+regex==2025.9.18
+requests==2.32.5
 rpds-py==0.27.1
+safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.16.2
+sentence-transformers==5.1.0
 service-identity==24.2.0
 setuptools==80.9.0
 sqlparse==0.5.3
+sympy==1.13.3
 threadpoolctl==3.6.0
+tokenizers==0.22.1
+torch==2.8.0+cpu
+torchaudio==2.8.0+cpu
+torchvision==0.23.0+cpu
+tqdm==4.67.1
+transformers==4.56.2
 Twisted==25.5.0
 txaio==25.6.1
 typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
+urllib3==2.5.0
 whitenoise==6.11.0
 zope.interface==8.0
