--- a/requirements.txt
+++ b/requirements.txt
@@ -56,9 +56,9 @@ sqlparse==0.5.3
 sympy==1.13.3
 threadpoolctl==3.6.0
 tokenizers==0.22.1
-torch==2.8.0+cpu
-torchaudio==2.8.0+cpu
-torchvision==0.23.0+cpu
+torch
+torchaudio
+torchvision
 tqdm==4.67.1
 transformers==4.56.2
 Twisted==25.5.0
